fix: mobile message too small

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 #mobile-message {
-    font-size: 10px;
+    font-size: 13px;
     color: #666;
     text-align: center;
     margin-top: 5px;
